--- a/CapaPresentacionAdmin/CapaPresentacionAdmin.csproj
+++ b/CapaPresentacionAdmin/CapaPresentacionAdmin.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Font.Awesome" Version="5.15.4" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
 </Project>
