--- a/CapaPresentacionAdmin/appsettings.json
+++ b/CapaPresentacionAdmin/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CarritoDeCompras": "Data source=JOSEPHOLARTE23;Initial Catalog =TareasDb;user id=sa;password=123;TrustServerCertificate=True"
+  }
 }
