--- a/CapaPresentacionAdmin/CapaPresentacionAdmin.csproj
+++ b/CapaPresentacionAdmin/CapaPresentacionAdmin.csproj
@@ -9,7 +9,15 @@
   <ItemGroup>
     <PackageReference Include="Font.Awesome" Version="5.15.4" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ClasesDatos\ClasesDatos.csproj" />
   </ItemGroup>
 
 </Project>
