--- a/CapaPresentacionTienda/CapaPresentacionTienda.csproj
+++ b/CapaPresentacionTienda/CapaPresentacionTienda.csproj
@@ -6,4 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClasesDatos\ClasesDatos.csproj" />
+  </ItemGroup>
+
 </Project>
